Added gio's client

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -129,6 +129,10 @@
     (Android 12+)
   </li>
   <li>
+    <a href="https://github.com/gios2/Walltaker-Changer/releases/latest" target="_blank">Gio's Client</a>
+    (Android)
+  </li>
+  <li>
     <a href="https://github.com/Lycraon/Walltaker-for-WallpaperEngine" target="_blank">Lycraon's Wallpaper Engine
       Client</a>
     (<a href="https://store.steampowered.com/app/431960/Wallpaper_Engine/">Wallpaper Engine for Windows</a>)
