--- a/app/views/links/_details.html.erb
+++ b/app/views/links/_details.html.erb
@@ -8,6 +8,7 @@
   automate: :mobile,
   wallpaper_engine: :desktop,
   swift: :desktop,
+  android_changer: :phone,
   unknown: :desktop
 } %>
 <% device = devices[client] %>
