--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -130,6 +130,9 @@
         <% when :swift %>
           <span>Mac Client</span>
           <ion-icon role="presentation" class="apple-icon" name="logo-apple"></ion-icon>
+        <% when :android_changer %>
+          <span>Gios Changer</span>
+          <ion-icon name="refresh-circle"></ion-icon>
         <% when :unknown %>
           <ion-icon role="presentation" name="help-circle-outline"></ion-icon>
         <% end %>
