Lol, post migraine coding, phone -> mobile

--- a/app/views/links/_details.html.erb
+++ b/app/views/links/_details.html.erb
@@ -8,7 +8,7 @@
   automate: :mobile,
   wallpaper_engine: :desktop,
   swift: :desktop,
-  android_changer: :phone,
+  android_changer: :mobile,
   unknown: :desktop
 } %>
 <% device = devices[client] %>
