--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -132,7 +132,7 @@
           <ion-icon role="presentation" class="apple-icon" name="logo-apple"></ion-icon>
         <% when :android_changer %>
           <span>Gios Changer</span>
-          <ion-icon name="refresh-circle"></ion-icon>
+          <ion-icon name="logo-octocat"></ion-icon>
         <% when :unknown %>
           <ion-icon role="presentation" name="help-circle-outline"></ion-icon>
         <% end %>
