Added gios explorer app

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -150,6 +150,12 @@
   </li>
 </ul>
 
+<h2 id="extra-apps">Companion/Explorer Apps</h2>
+<p>Extra tools that tie into Walltaker's site. These should help to integrate walltaker better or make the user experience cleaner.</p>
+<ul>
+  <li><a href="https://github.com/gios2/Walltaker-Explorer/releases/latest" target="_blank">Gio's Explorer</a> (Android)</li>
+</ul>
+
 <h2>Help us out!</h2>
 <p>
   We'll be upfront! This site very cheap to operate. We have very little in running costs, and I am personally OK with
