--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -132,6 +132,32 @@
             <% end %>
           </div>
         </div>
+        <div class="abilities__ability">
+          <% can_be_set_by_porn_bot = link.check_ability 'can_be_set_by_porn_bot' %>
+
+          <div class="abilities__ability__title">
+            <strong>
+              <% if can_be_set_by_porn_bot %>
+                <ion-icon name="thumbs-up"></ion-icon>
+              <% else %>
+                <ion-icon name="hand-left"></ion-icon>
+              <% end %>
+              PornBot™ is <%= can_be_set_by_porn_bot ? 'welcomed' : 'turned away' %>
+            </strong>
+            <p>
+              <% if can_be_set_by_porn_bot %>
+                Your wallpaper will be changed by our resident horny robot: PornBot. They (a gender-defying icon) select a highly-rated post that matches your blacklist rules.
+              <% else %>
+                Your wallpaper will not changed by our resident horny robot: PornBot. You will only get wallpapers from fleshy human-beings.
+              <% end %>
+            </p>
+          </div>
+          <div class="abilities__ability__controls">
+            <%= button_to toggle_link_ability_link_path(ability: :can_be_set_by_porn_bot), method: :post, class: can_be_set_by_porn_bot ? 'enabled' : 'disabled' do %>
+              <%= can_be_set_by_porn_bot ? 'Disallow PornBot' : 'Allow PornBot' %>
+            <% end %>
+          </div>
+        </div>
       </div>
     <% end %>
   </div>
