--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -71,6 +71,8 @@
             <% case edge.ability %>
             <% when 'can_show_videos' %>
               <ion-icon name="videocam-outline"></ion-icon>
+            <% when 'can_be_set_by_porn_bot' %>
+              <ion-icon name="thumbs-up-outline"></ion-icon>
             <% end %>
           </span>
         <% end %>
