--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -72,7 +72,7 @@
             <% when 'can_show_videos' %>
               <ion-icon name="videocam-outline"></ion-icon>
             <% when 'can_be_set_by_porn_bot' %>
-              <ion-icon name="thumbs-up-outline"></ion-icon>
+              <ion-icon name="dice-outline"></ion-icon>
             <% end %>
           </span>
         <% end %>
