--- a/app/views/links/_details.html.erb
+++ b/app/views/links/_details.html.erb
@@ -9,6 +9,7 @@
   wallpaper_engine: :desktop,
   swift: :desktop,
   android_changer: :mobile,
+  jberliner: :desktop,
   unknown: :desktop
 } %>
 <% device = devices[client] %>
