--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -142,6 +142,9 @@
         <% when :android_changer %>
           <span>Gios Changer</span>
           <ion-icon name="logo-octocat"></ion-icon>
+        <% when :jberliner %>
+          <span>JBerliner's Walltaker.sh</span>
+          <ion-icon name="pint"></ion-icon>
         <% when :unknown %>
           <ion-icon role="presentation" name="help-circle-outline"></ion-icon>
         <% end %>
