--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -142,8 +142,8 @@
     (<a href="https://llamalab.com/automate/">Automate App for Android</a>)
   </li>
   <li>
-    <a href="https://gitlab.com/JBerliner/walltaker.sh" target="_blank">JBerliner's Walltaker.sh</a>
-    (Linux, i3 or Gnome)
+    <a href="https://gitlab.com/JBerliner/walltaker-client" target="_blank">JBerliner's Walltaker.sh</a>
+    (Linux)
   </li>
   <li>
     <a href="https://github.com/PawCorp/walltaker-macos/releases/latest" target="_blank">MacOS Client</a>
