Revert "ddos notice"
This reverts commit 868f69276b046a4b3dc771900c064cd2e2688bc3.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,7 @@
 <header>
   <div class="header__age-warning">
     🔞 This is an app for adults over the age of 18 only.<br/>
-    Requests? Bugs? <a href="https://discord.gg/waaHCqUXj6" target="_blank">Gios made us a discord!</a><br/>
-    <br/>
-    <strong>E621 is having some problems with a DDOS attack.</strong><br/>Please be patient, E621 search and post grabbing will not work till they are sorted on their side.
+    Requests? Bugs? <a href="https://discord.gg/waaHCqUXj6" target="_blank">Gios made us a discord!</a>
   </div>
   <div class="header__inner">
     <h1><a href="/">
