--- a/public/base.css
+++ b/public/base.css
@@ -216,7 +216,7 @@ h2 ion-icon.big {
 
 h3 {
     font-size: 1.6rem;
-    margin: 1.75rem 0 0;
+    margin: 1.75rem 0 0.5rem;
     font-weight: normal;
 }
 
