--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -97,7 +97,7 @@
       walltaker.toml
     </a>
 
-    <h3>iOS Widget</h3>
+    <h3>iOS Widget<span class="beta-tag">beta</span></h3>
     <p>
       We support iOS only thru a widget app. This is a workaround for Apple's draconian adult-content rules. Shhhhhh, don't tell Tim we're cumming on his devices! <strong>You will need to install <a href="https://apps.apple.com/us/app/widget-construction-set/id6444323235?platform=iphone">Widget Construction Set</a> first.</strong> When installed, click the button below and select one of the widget sizes you'd like. Then add the WCS widget to your homescreen!
     </p>
