ios widget now triggers online status with a 20min cool down

--- a/app/views/links/_details.html.erb
+++ b/app/views/links/_details.html.erb
@@ -7,6 +7,7 @@
   joihow: :desktop,
   automate: :mobile,
   wallpaper_engine: :desktop,
+  ioswidget: :mobile,
   swift: :desktop,
   android_changer: :mobile,
   jberliner: :desktop,
