--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -136,6 +136,9 @@
         <% when :wallpaper_engine %>
           <span>Lycaon's Wallpaper Engine</span>
           <ion-icon role="presentation" name="cog"></ion-icon>
+        <% when :ioswidget %>
+          <span>iOS Widget</span>
+          <ion-icon role="presentation" class="apple-icon" name="logo-apple"></ion-icon>
         <% when :swift %>
           <span>Mac Client</span>
           <ion-icon role="presentation" class="apple-icon" name="logo-apple"></ion-icon>
