--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -66,55 +66,17 @@
       Only you see this
     </div>
 
-    <h2>
-      <ion-icon role="presentation" name="person" class="big"></ion-icon>
-      Your Link
-    </h2>
-
-    <p>Give live feedback to people who are setting your wallpaper! Type any message in below, and choose a mood. "Hate
-      it!" will remove the current wallpaper entirely.</p>
     <%= form_with model: @link, method: 'PATCH', class: 'set-post-response' do |form| %>
       <div>
         <%= form.text_field :response_text, placeholder: 'How do you feel about this wallpaper?', autocomplete: 'off' %>
         <%= form.select :response_type, [['Love it!', :horny], ['Hate it!', :disgust], ['I came', :came]] %>
+        <%= form.submit 'Reply' %>
       </div>
-
-      <%= form.submit 'Send Feedback' %>
     <% end %>
 
-    <h3>Set up your link</h3>
-    <p>
-      You'll need a client that watches for changes to this link and sets your background for you. You can see a list of
-      available clients on the <%= link_to 'homepage.', root_path(anchor: "what-do-i-need") %> Once you have a client
-      set up, you can drop this configuration file in the same folder to connect to this link if it's required, or
-      manually set your feed ID to
-      <strong>"<%= @link.id %>"</strong>.
+    <p class="set-post-response__description">
+      Reply publicly to the user who set your wallpaper so they know what you like! If you select "Hate it", the wallpaper will be reset to the previous wallpaper. If you select "I came" an orgasm will be logged on your user profile.
     </p>
-    <br/>
-
-    <a download href="<%= link_url(@link) %>/walltaker.toml">
-      <ion-icon role="presentation" name="document-outline"></ion-icon>
-      walltaker.toml
-    </a>
-
-    <h3>iOS Widget<span class="beta-tag">beta</span></h3>
-    <p>
-      We support iOS only thru a widget app. This is a workaround for Apple's draconian adult-content rules. Shhhhhh, don't tell Tim we're cumming on his devices! <strong>You will need to install <a href="https://apps.apple.com/us/app/widget-construction-set/id6444323235?platform=iphone">Widget Construction Set</a> first.</strong> When installed, click the button below and select one of the widget sizes you'd like. Then add the WCS widget to your homescreen!
-    </p>
-    <br/>
-
-    <a class="no-underline" href="widget://add_widget?url=https://walltaker.joi.how/api/links/<%= @link.id %>/widget.json">
-      <ion-icon name="copy-outline"></ion-icon>
-      Install Widget
-    </a>
-  </div>
-
-  <div class="accent-block">
-    <div class="accent-block__charm">
-      <ion-icon role="presentation" name="information-circle"></ion-icon>
-      Need help?
-    </div>
-    I wrote up some tips about combating harassment on the <a href="<%= help_path %>#bad-wallpaper">help page.</a>
   </div>
 <% end %>
 
