--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -75,8 +75,62 @@
     <% end %>
 
     <p class="set-post-response__description">
-      Reply publicly to the user who set your wallpaper so they know what you like! If you select "Hate it", the wallpaper will be reset to the previous wallpaper. If you select "I came" an orgasm will be logged on your user profile.
+      Reply publicly to the user who set your wallpaper so they know what you like! If you select "Hate it", the
+      wallpaper will be reset to the previous wallpaper. If you select "I came" an orgasm will be logged on your user
+      profile.
     </p>
+  </div>
+
+  <div class="accent-block client-configs__wrapper">
+    <div class="accent-block__charm">
+      <ion-icon role="presentation" name="information-circle"></ion-icon>
+      Need help?
+    </div>
+    <h3>Setting up your link</h3>
+    <p>
+      You'll need a client that watches for changes to this link and sets your background for you. You can see a list of
+      available clients on the <%= link_to 'homepage.', root_path(anchor: "what-do-i-need") %> Once you have a client
+      set up, you should be able to either enter your Feed ID:
+      <strong>"<%= @link.id %>"</strong> or import one of the following files:
+    </p>
+
+    <div class="client-configs">
+      <a download href="<%= link_url(@link) %>/walltaker.toml">
+        <ion-icon role="presentation" name="document-outline"></ion-icon>
+        walltaker.toml
+      </a>
+
+      <div
+        class="as-link no-underline"
+        data-controller="widget-installer"
+      >
+        <ion-icon name="copy-outline"></ion-icon>
+        Install iOS Widget
+        <span class="beta-tag">beta</span>
+
+        <!-- modals -->
+        <dialog class="modal" data-widget-installer-target="modal">
+          <h4>iOS Widget Installation</h4>
+          <p>
+            We support iOS only thru a widget app. This is a workaround for Apple's draconian adult-content rules.
+            <strong>You will need to install
+            <a href="https://apps.apple.com/us/app/widget-construction-set/id6444323235?platform=iphone">Widget
+              Construction Set</a> first.</strong> When installed, click the "Add Widget" button below and select one of the widget
+            sizes you'd like. Then add the WCS widget to your homescreen!
+          </p>
+          <div class="modal__buttons">
+            <%= link_to 'https://apps.apple.com/us/app/widget-construction-set/id6444323235?platform=iphone', class: 'no-underline secondary' do %>
+              <ion-icon role="presentation" name="cloud-download"></ion-icon>
+              Install WCS
+            <% end %>
+            <%= link_to "widget://add_widget?url=https://walltaker.joi.how/api/links/#{@link.id}/widget.json", class: 'no-underline secondary' do %>
+              <ion-icon role="presentation" name="duplicate"></ion-icon>
+              Add Widget
+            <% end %>
+          </div>
+        </dialog>
+      </div>
+    </div>
   </div>
 <% end %>
 
