--- a/public/base.css
+++ b/public/base.css
@@ -27,7 +27,7 @@
     color: var(--text-light);
 }
 
-.client-configs__wrapper h3:nth-child(2) {
+.client-configs__wrapper div > h3 {
     margin-top: 0;
 }
 
@@ -674,10 +674,11 @@ a.small:hover {
 
 .accent-block {
     background: var(--accent-bg);
-    padding: 40px 1.5rem 1.5rem;
+    padding: 55px 1.5rem 1.5rem;
     border-radius: 8px;
     margin-top: 2.25rem;
     display: block;
+    position: relative;
 }
 
 .accent-block > p {
@@ -715,9 +716,26 @@ a.small:hover {
     display: flex;
     align-items: center;
     gap: 7px;
-    padding: 0 0 0.75rem;
-    height: 0;
-    transform: translateY(-100%);
+    position: absolute;
+    top: 0;
+    height: 55px;
+}
+
+.accent-block__charm--accordion[aria-expanded=false] {
+    padding-bottom: 0;
+}
+
+.accent-block__charm--accordion-header {
+    cursor: pointer;
+    width: calc(100% - 3rem); /* 3rem is a magic value, twice the parent element L+R padding */
+}
+
+.accent-block__charm--accordion-header:hover {
+    color: var(--text);
+}
+
+.accent-block__charm--accordion[aria-expanded=true] .accent-block__charm--accordion-header__indicator {
+    transform: rotate(180deg);
 }
 
 .accent-block__charm ion-icon {
