Fixed modals in safari and linked to ios widget docs

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -150,6 +150,10 @@
     (MacOS)
   </li>
   <li>
+    <a href="https://github.com/PawCorp/walltaker/blob/main/ios.md#ios-widget" target="_blank">iOS Widget</a>
+    (iOS)
+  </li>
+  <li>
     <a href="http://joi.how/" target="_blank">JOI.how</a> (Web-based)
   </li>
 </ul>
